--- a/prime_admin/templates/lms/batches/batch_table.html
+++ b/prime_admin/templates/lms/batches/batch_table.html
@@ -18,7 +18,6 @@
         $("#li_batches").addClass('mm-active');
     
         var js_fields_array = JS_FIELDS.split(",");
-    
         for (i=0; i < js_fields_array.length; i++){
             js_fields_array[i] = js_fields_array[i].replace('[', '');
             js_fields_array[i] = js_fields_array[i].replace(']', '');
@@ -26,7 +25,6 @@
             js_fields_array[i] = js_fields_array[i].replace('"', '');
             js_fields_array[i] = js_fields_array[i].replace(/\s/g, '');
         }
-    
     
         $.ajaxSetup({
             beforeSend: function(xhr, settings) {
@@ -36,36 +34,52 @@
             }
         });
     
-    
         dtbl_table = $('#index_table').DataTable({
             "dom": 'rtip',
-            "pageLength": 20,
-            "order": [[ 1, 'asc' ]]
+            "pageLength": 25,
+            "order": [[1, 'asc']],
+            "processing": true,
+            "serverSide": true,
+            "autoWidth": false,
+            "ordering": false,
+            "columnDefs": [
+                { "visible": false, "targets": 0 },
+                {
+                    "targets": 1,
+                    'className': 'text-center',
+                    'render': function(data, type, row){
+                        if (row[1]){
+                            return `<div class="mb-2 mr-2 badge badge-pill badge-success">ACTIVE</div>`;
+                        }else {
+                            return `<div class="mb-2 mr-2 badge badge-pill badge-secondary">INACTIVE</div>`;
+                        }
+                    }
+                },
+                {
+                    "targets": 7,
+                    'className': 'text-center',
+                    'render': function(data, type, row){
+                        return `<button style="margin-bottom: 8px;" type="button" data-toggle="modal" data-target="#viewModal" class="mr-2 btn-icon btn-icon-only btn btn-outline-info btn-view"><i class="pe-7s-look btn-icon-wrapper"> </i></button>`;
+                    }
+                }
+            ],
+            "ajax": {
+                "url": "/learning-management/datatables/batches/batches",
+                "data": function (d) {
+                    d.branch = $("#filter_branch").val();
+                },
+            }
         });
     
-    
-        dtbl_table.on( 'order.dt search.dt', function () {
-            dtbl_table.column(0, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
-                cell.innerHTML = i+1;
-            } );
-        } ).draw();
-    
-    
-        $('.search-input').on('keyup', function () {
-            dtbl_table.search(this.value).draw();
-        } );
-    
-    
-        $("#index_table tbody").on('click','.row_object',function(){
-            let id = '#param_' + $(this).attr('id');
-            
+        $("#index_table tbody").on('click', '.btn-view',function(){
+            let data = dtbl_table.row($(this).parents('tr')).data();
+
             if($("#view_edit_button").length){
-                const view_url = $(id).attr('value');
-                document.getElementById("view_edit_button").setAttribute("href", view_url);
+                document.getElementById("view_edit_button").setAttribute("href", `/learning-management/batches/${data[0]}/edit`);
             }
 
             $.getJSON(
-                `/learning-management/batches/${$(this).attr('id')}`, function (response) {
+                `/learning-management/batches/${data[0]}`, function (response) {
                     $("#view_number").val(response.no);
                     $("#view_branch").val(response.branch);
                     $("#view_start_date").val(response.start_date);
@@ -119,13 +133,13 @@
         var BATCHID;
         var ROWSTATUS;
     
-        $("#index_table tbody").on('click','.row_object',function(){
+        $("#index_table tbody").on('click','.btn-view',function(){
             let $row = $(this).closest('tr');
             let data = dtbl_table.row($row).data();
-            BATCHID = data.DT_RowId;
             let row_status = data[1];
-    
-            if(row_status == `<div class="mb-2 mr-2 badge badge-pill badge-success">ACTIVE</div>`){
+
+            BATCHID = data[0];
+            if(row_status){
                 ROWSTATUS = 0;
                 $("#btn_active_toggle").html('Set Inactive');
                 $("#btn_active_toggle").removeClass("btn-success").addClass("btn-secondary");
@@ -163,8 +177,12 @@
                 }
             });
         });
-    
-    });
+        
+        
+        $("#filter_branch").change(function(){
+            dtbl_table.ajax.reload();
+        });
+    }); //document.ready
 </script>
 {% endblock %}
 
@@ -178,7 +196,7 @@
                     <i class="{{ RENDERED_MODEL.__amicon__ }} icon-gradient bg-happy-itmeo"></i>
                 </div>
                 <div>
-                    {{ TABLE_OPTIONS['heading'] }}
+                    {{ TABLE_OPTIONS['heading'] }} 
                     <div class="page-title-subheading">
                         {{ TABLE_OPTIONS['subheading'] }}
                     </div>
@@ -194,39 +212,50 @@
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
+                <div class="card-body">
+                    <h5 class="card-title">Filter</h5>
+                    <div class="form-row">
+                        <div class="col-md-3 col-xs-2">
+                            <div class="position-relative form-group">
+                                <label for="filter_branch" class="">Branch</label>
+                                <select id="filter_branch" class="form-control">
+                                    {% if current_user.role.name == "Secretary" %}
+                                        <!-- Pass -->
+                                    {% else %}
+                                        <option value="all">All</option>
+                                    {% endif %}
+        
+                                    {% for branch in TABLE_OPTIONS['branches'] %}
+                                        <option value="{{ branch.id }}">
+                                            {{ branch.name }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="main-card mb-3 card">
                     <div class="table-responsive">
                     <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
                         <thead>
                         <tr>
-                            <th class="text-center"></th>
-                            {% for column in TABLE_OPTIONS['table_columns'] %}
-                            <th class="text-center">{{ column.upper() }}</th>
-                            {% endfor %}
+                            <th class="text-center">ID</th>
+                            <th class="text-center">STATUS</th>
+                            <th class="text-center">NUMBER</th>
+                            <th class="text-center">BRANCH</th>
+                            <th class="text-center">START DATE</th>
+                            <th class="text-center">CREATED BY</th>
+                            <th class="text-center">UPDATED BY</th>
+                            <th class="text-center">ACTIONS</th>
                         </tr>
                         </thead>
                         <tbody>
-                            {% for row_data in TABLE_OPTIONS['table_data'] %}
-                                <tr class="item row_object" id="{{row_data[0]}}"  data-toggle="modal" data-target="#viewModal">
-                                <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if TABLE_OPTIONS['edit_url'] %} value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
-                                    <!-- TEMPORARY conversion ng boolean word 'true' to 'YES' and 'false' to 'NO' -->
-                                    <td class="text-center"></td>
-                                    {% for value in row_data %}
-                                        {% if loop.index > 1 %}
-                                        <td class="text-center">
-                                            {% if value == none %}
-                                            {% elif value is true %}
-                                            <div class="mb-2 mr-2 badge badge-pill badge-success">ACTIVE</div>
-                                            {% elif value is false %}
-                                            <div class="mb-2 mr-2 badge badge-pill badge-secondary">INACTIVE</div>
-                                            <!-- pass -->
-                                            {% else %}
-                                                {{value}}
-                                            {% endif %}
-                                        </td>
-                                        {% endif %}
-                                    {% endfor %}
-                                </tr>
-                            {% endfor %}
                         </tbody>
                     </table>
                 </div>
