feat: 607ecbd7efd14dcfa455f5af9962e90a

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -57,6 +57,27 @@
                                 </div>
                             </div>
                             <div class="form-row">
+                                <div class="col-md-6" style="display:none;">
+                                    <div class="position-relative form-group">
+                                        <label for="expenses_bank" class="">BANK</label>
+                                        <select name="expenses_bank" id="expenses_bank" class="form-control">
+                                            <option value="">Choose...</option>
+                                            <option value="METROBANK">METROBANK</option>
+                                            <option value="BDO">BDO</option>
+                                            <option value="LANDBANK">LANDBANK</option>
+                                            <option value="BPI">BPI</option>
+                                            <option value="RCBC">RCBC</option>
+                                            <option value="CHINABANK">CHINABANK</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6" style="display:none;">
+                                    <div class="position-relative form-group"><label for="expenses_account_name"
+                                            class="">Account Name</label><input name="expenses_account_name" id="expenses_account_name"
+                                            type="text" class="form-control"></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label id="lbl_account_no" for="account_no" class="">Account
                                             No. / Particular</label><input name="account_no" id="account_no" type="text"
