--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/utilities.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/utilities.html
@@ -52,6 +52,8 @@
                 <tr>
                     <th class="text-center">DATE</th>
                     <th class="text-center">DESCRIPTION</th>
+                    <th class="text-center">BANK</th>
+                    <th class="text-center">ACCOUNT NAME</th>
                     <th class="text-center">ACCOUNT NO. | PARTICULAR NO.</th>
                     <th class="text-center">BILLING MONTH</th>
                     <th class="text-center">TOTAL AMOUNT DUE</th>
