feat: 05a4164aa6e847ea8690a5f09a104623

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -120,6 +120,15 @@
                                             type="number" name="total_amount_due" class="form-control">
                                     </div>
                                 </div>
+                                <div class="col-md-3" style="display:none">
+                                    <div class="position-relative form-group"><label for="total_amount_due"
+                                            class="">Show List</label>
+                                        <button id="btn_show_earnings" type="button" data-toggle="modal" data-target="#mdl_list_of_earnings" data-placement="bottom"
+                                            class="btn-shadow mr-3 btn btn-primary">
+                                            <i class="fa fa-eye"></i> List of Earnings
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-row">
                                 <div class="col-md-6">
