--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -124,7 +124,7 @@
                 { "visible": false, "targets": 9 },
                 { "visible": false, "targets": 0 },
             ];
-        } else if (CURRENT_USER_ROLE == "Admin"){
+        } else {
             columnDefs = [
                 { "visible": false, "targets": 0 },
                 { "visible": false, "targets": 12 },
@@ -766,7 +766,7 @@
 
     <div class="main-card mb-3 card">
         <div class="card-body">
-            {% if current_user.role.name == "Admin" or current_user.role.name == "Partner" or current_user.role.name == "Manager" %}
+            {% if current_user.role.name == "Admin" or current_user.role.name == "Partner" %}
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
@@ -892,51 +892,52 @@
             </div>
             {% endif %}
 
-            {% if current_user.role.name != "Secretary" %}
-            <h5>Sales Statement</h5>
-            <div class="row">
-                <div class="col-lg-4 col-xl-4">
-                    <div class="card mb-3 widget-content">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Deposit</div>
-                                <div class="widget-subheading">Total</div>
-                            </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span id="total_deposit">₱ 0.00</span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xl-4">
-                    <div class="card mb-3 widget-content">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Withdrawal</div>
-                                <div class="widget-subheading">Total</div>
-                            </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-primary"><span id="total_withdrawal">₱ 0.00</span></div>
+            {% if current_user.role.name == "Admin" or current_user.role.name == "Partner" %}
+                <h5>Sales Statement</h5>
+                <div class="row">
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="card mb-3 widget-content">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">Deposit</div>
+                                    <div class="widget-subheading">Total</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-success"><span id="total_deposit">₱ 0.00</span></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-xl-4">
-                    <div class="card mb-3 widget-content">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="widget-heading">Current Balance</div>
-                                <div class="widget-subheading">Total</div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="card mb-3 widget-content">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">Withdrawal</div>
+                                    <div class="widget-subheading">Total</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-primary"><span id="total_withdrawal">₱ 0.00</span></div>
+                                </div>
                             </div>
-                            <div class="widget-content-right">
-                                <div class="widget-numbers text-primary"><span id="total_current_balance">₱ 0.00</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="card mb-3 widget-content">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">Current Balance</div>
+                                    <div class="widget-subheading">Total</div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-primary"><span id="total_current_balance">₱ 0.00</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             {% endif %}
+
             <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
                 <li class="nav-item">
                     <a role="tab" class="nav-link show active" id="tab-c1-0" data-toggle="tab"
