fix: marketer earnings page side

--- a/prime_admin/templates/lms/earnings/marketer.html
+++ b/prime_admin/templates/lms/earnings/marketer.html
@@ -136,6 +136,16 @@
         <div class="tab-content">
             <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
                 <div class="form-row">
+                    <div class="col-md-3">
+                        <div class="position-relative form-group">
+                            <label for="filter_date" class="">Date</label>
+    
+                            <div id="filter_date" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+                                <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+                                <span></span> <b class="caret"></b>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-2">
                         <div class="position-relative form-group">
                             <label for="branch" class="">Branch</label>
