feat: GCASH added

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -68,6 +68,7 @@
                                             <option value="BPI">BPI</option>
                                             <option value="RCBC">RCBC</option>
                                             <option value="CHINABANK">CHINABANK</option>
+                                            <option value="GCASH">GCASH</option>
                                         </select>
                                     </div>
                                 </div>
