--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -42,6 +42,7 @@
                                             <option value="Employee Benefits">Employee Benefits</option>
                                             <option value="Bookeeper Retainer Fee">Bookeeper's Retainers Fee</option>
                                             <option value="SNPL Fee">SNPL Fee</option>
+                                            <option value="Transportation">Transportation</option>
                                         </select>
                                     </div>
                                 </div>
