feat: 19bb34bcdede4c98a97e0e8a5e920312

--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -50,7 +50,7 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                     role="button" aria-haspopup="true" aria-expanded="false">DMW</a>
             </li>
             <li class="nav-item dropdown">
-                <a href="https://eps.hrdkorea.or.kr/epstopik/home/main/mainPage.do?lang=en" class="nav-link px-lg-3 py-lg-4"
+                <a href="https://epstopik.hrdkorea.or.kr/epstopik/home/main/mainPage.do?lang=kr" class="nav-link px-lg-3 py-lg-4"
                     role="button" aria-haspopup="true" aria-expanded="false">EPS-TOPIK</a>
             </li>
             <li class="nav-item dropdown">
