feat: af204c3b99dc4836ac144b1f43022700

--- a/prime_admin/templates/lms/office_supplies/modals/supply_transactions_modal.html
+++ b/prime_admin/templates/lms/office_supplies/modals/supply_transactions_modal.html
@@ -17,6 +17,8 @@
                                 <th>DATE</th>
                                 <th>TYPE</th>
                                 <th>QUANTITY</th>
+                                <th>NEW REMAINING</th>
+                                <th>NEW REPLACEMENT</th>
                             </tr>
                             </thead>
                             <tbody>
